--- a/penagihan-domain/pom.xml
+++ b/penagihan-domain/pom.xml
@@ -2,29 +2,22 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.artivisi.penagihan</groupId>
 	<artifactId>penagihan-domain</artifactId>
-	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Domain Object</name>
 	<url>http://maven.apache.org</url>
+
+	<parent>
+		<groupId>com.artivisi.penagihan</groupId>
+		<artifactId>penagihan</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.25</version>
-		</dependency>
 	</dependencies>
 </project>
