--- a/penagihan-ui-swing/pom.xml
+++ b/penagihan-ui-swing/pom.xml
@@ -2,13 +2,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.artivisi.penagihan</groupId>
     <artifactId>penagihan-ui-swing</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>UI Desktop dengan Swing</name>
     <url>http://maven.apache.org</url>
+    
+    <parent>
+		<groupId>com.artivisi.penagihan</groupId>
+		<artifactId>penagihan</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,13 +23,6 @@
             <groupId>com.artivisi.penagihan</groupId>
             <artifactId>penagihan-domain</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-	
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
