--- a/pom.xml
+++ b/pom.xml
@@ -2,27 +2,30 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>penagihan-service</artifactId>
-	<packaging>jar</packaging>
+	<groupId>com.artivisi.penagihan</groupId>
+	<artifactId>penagihan</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
 
-	<name>Implementasi Business Process</name>
+	<name>Aplikasi Penagihan</name>
 	<url>http://maven.apache.org</url>
-	
-	<parent>
-		<groupId>com.artivisi.penagihan</groupId>
-		<artifactId>penagihan</artifactId>
-		<version>1.0-SNAPSHOT</version>
-	</parent>
+
+    <modules>
+        <module>penagihan-domain</module>
+        <module>penagihan-service</module>
+        <module>penagihan-ui-swing</module>
+    </modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
-	    <dependency>
-			<groupId>com.artivisi.penagihan</groupId>
-			<artifactId>penagihan-domain</artifactId>
-			<version>1.0-SNAPSHOT</version>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
