--- a/penagihan-service/pom.xml
+++ b/penagihan-service/pom.xml
@@ -42,6 +42,12 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>3.2.3.RELEASE</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>3.2.3.RELEASE</version>
+		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
