--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<versi.springframework>3.2.3.RELEASE</versi.springframework>
+		<versi.commons-logging>1.1.3</versi.commons-logging>
+		<versi.commons-dbcp>1.4</versi.commons-dbcp>
+		<versi.mysql>5.1.25</versi.mysql>
 	</properties>
 
 	<dependencies>
