--- a/penagihan-service/pom.xml
+++ b/penagihan-service/pom.xml
@@ -42,11 +42,18 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>${versi.springframework}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${versi.springframework}</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
+			<artifactId>spring-test</artifactId>
 			<version>${versi.springframework}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
