--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<versi.commons-logging>1.1.3</versi.commons-logging>
 		<versi.commons-dbcp>1.4</versi.commons-dbcp>
 		<versi.mysql>5.1.25</versi.mysql>
+		<versi.hibernate>4.2.2.Final</versi.hibernate>
 	</properties>
 
 	<dependencies>
