encrypt password database

--- a/penagihan-service/src/main/resources/jdbc.properties
+++ b/penagihan-service/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost/penagihan_development
 jdbc.username=root
-jdbc.password=admin
+jdbc.password=ENC(FqDq1iO5EjD2Jkn9cfEF5w==)
 
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
