--- a/penagihan-service/pom.xml
+++ b/penagihan-service/pom.xml
@@ -48,7 +48,13 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${versi.springframework}</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt-spring31</artifactId>
+			<version>${versi.jasypt}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
