--- a/penagihan-domain/pom.xml
+++ b/penagihan-domain/pom.xml
@@ -21,7 +21,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
+			<artifactId>hibernate-entitymanager</artifactId>
 			<version>${versi.hibernate}</version>
 		</dependency>
 	</dependencies>
