implement dbunit untuk menyediakan sample data

--- a/penagihan-service/pom.xml
+++ b/penagihan-service/pom.xml
@@ -26,12 +26,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>${versi.commons-logging}</version>
-		</dependency>
-
-		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
 			<version>${versi.commons-dbcp}</version>
@@ -59,6 +53,13 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${versi.springframework}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.dbunit</groupId>
+			<artifactId>dbunit</artifactId>
+			<version>${versi.dbunit}</version>
 			<scope>test</scope>
 		</dependency>
 
