--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.artivisi.penagihan</groupId>
@@ -14,7 +14,13 @@
         <module>penagihan-domain</module>
         <module>penagihan-service</module>
         <module>penagihan-ui-swing</module>
-    </modules>
+    <module>penagihan-client-local</module>
+    <module>penagihan-client-httpinvoker</module>
+    <module>penagihan-server-httpinvoker</module>
+    <module>penagihan-client-rest</module>
+    <module>penagihan-server-rest</module>
+    <module>penagihan-web</module>
+  </modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
