--- a/penagihan-ui-swing/pom.xml
+++ b/penagihan-ui-swing/pom.xml
@@ -9,10 +9,10 @@
     <url>http://maven.apache.org</url>
     
     <parent>
-		<groupId>com.artivisi.penagihan</groupId>
-		<artifactId>penagihan</artifactId>
-		<version>1.0-SNAPSHOT</version>
-	</parent>
+        <groupId>com.artivisi.penagihan</groupId>
+        <artifactId>penagihan</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,6 +22,11 @@
         <dependency>
             <groupId>com.artivisi.penagihan</groupId>
             <artifactId>penagihan-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.artivisi.penagihan</groupId>
+            <artifactId>penagihan-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
